added our 10 drone count maximum registerating: the code to be commented incase we we want to add more drones above 10